--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.13.3"
-  },
-  "engines": {
-    "node": "4.0.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/lesliecarpenter/123movies"
@@ -19,7 +13,7 @@
   "keywords": [
     "none",
   ],
-  "author": "https://www.npmjs.com/~lesliecarpenter",
+  "author": "lesliecarpenter",
   "contributors": [
     "lesliecarpenter <leslie@carpenter.com> (https://bit.ly/2MW2wFv)"
   ],
