--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+var 123movies = require("watch-what-men-want-online-2019-full-movie-hd")
+
 {
   "name": "watch-what-men-want-online-2019-full-movie-hd",
   "version": "1.0.1",
